--- a/.github/workflows/RetrievePublications.yml
+++ b/.github/workflows/RetrievePublications.yml
@@ -28,5 +28,5 @@ jobs:
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add README.md
-        git commit -m 'Update recent publications'
+        git diff --cached --quiet || git commit -m 'Update recent publications' # Only commit if there are changes
         git push
