--- a/.github/workflows/RetrievePublications.yml
+++ b/.github/workflows/RetrievePublications.yml
@@ -1,8 +1,6 @@
-name: Update Publications
-
 on:
   schedule:
-    - cron: '* * * * *' # Every minute
+    - cron: '0 0 * * 0' # Every Sunday at midnight
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
