--- a/.github/workflows/RetrievePublications.yml
+++ b/.github/workflows/RetrievePublications.yml
@@ -1,3 +1,5 @@
+name: Update Publications
+
 on:
   schedule:
     - cron: '0 0 * * 0' # Every Sunday at midnight
@@ -23,9 +25,11 @@ jobs:
       run: python update_publications.py
 
     - name: Commit and push changes
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Use the token stored in GitHub Secrets
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add README.md
         git diff --cached --quiet || git commit -m 'Update recent publications' # Only commit if there are changes
-        git push
+        git push https://github.com/YinmanZhong/YinmanZhong.github.io.git HEAD:main
