--- a/.github/workflows/update_publications.yml
+++ b/.github/workflows/update_publications.yml
@@ -28,6 +28,6 @@ jobs:
       run: |
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add publications.md
+        git add README.md
         git commit -m "Update publications"
         git push
