--- a/.github/workflows/update_publications.yml
+++ b/.github/workflows/update_publications.yml
@@ -1,4 +1,4 @@
-name: Update Publications
+name: Update README with Google Scholar Publications
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-publications:
+  update-readme:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,7 +21,7 @@ jobs:
     - name: Install Dependencies
       run: pip install scholarly
 
-    - name: Update Publications
+    - name: Update README
       run: python update_publications.py
 
     - name: Commit and Push Changes
@@ -29,5 +29,5 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add README.md
-        git commit -m "Update publications"
+        git commit -m "Update README with latest publications"
         git push
